--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="website">
             <div class="header">
                 <div class="logo">
-                    <div class="logo-text"><a href="#">Commute</a></div>
+                    <div class="logo-text"><a href="#"><span class="regis">®</span>Commute</a></div>
                 </div>
                 <div class="status_bar">
                     <div class="contact_info">
@@ -55,7 +55,7 @@
                         <hr>
                     </div>
                     <div class="Info">
-                        <div>by <span class="m-corp">©M.Corps</span></div>
+                        <div>by <span class="m-corp"><span class="copy">©</span>Mythical Corporations</span></div>
                     </div>
                 </div>
                 <div class="chat_area">
